--- a/FinalProject_Group069_FA23.ipynb
+++ b/FinalProject_Group069_FA23.ipynb
@@ -2587,7 +2587,7 @@
       "source": [
         "# Discussion and Conclusion\n",
         "\n",
-        "In contrast to the \"pink tax,\" we found that, when we compared prices across categories for similar women's and men's clothing products, men's apparel goods at Zara were frequently more costly. For example, men's blazers were over &#36;40 more on average. Men's items also exhibited greater price variability and wider ranges overall. Some men's jackets cost over &#36;190,, whereas no women's jackets exceeded &#36;130\n",
+        "In contrast to the \"pink tax,\" we found that, when we compared prices across categories for similar women's and men's clothing products, men's apparel goods at Zara were frequently more costly. For example, men's blazers were over \\$40 more on average. Men's items also exhibited greater price variability and wider ranges overall. Some men's jackets cost over \\$190, whereas no women's jackets exceeded $130.\n",
         "\n",
         "More precisely, men's jackets, shirts, slacks, and blazers are usually more expensive than similar women's items. There was also greater variety and a larger range of prices for men's items. The majority of women's goods were priced under \\$70 across categories, exhibiting tighter clusters away from extremes. The assumption that women pay an extra \"pink tax\" across consumer categories is certainly questionable in this case.\n",
         "\n",
